# reason-react-native-template

./: .gitignore  App.js  Makefile  app.json  dune  dune-project  package.json  reason-react-native-template.opam.template
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/reasonreactnativetemplate/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/ReasonReactNativeTemplate/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/ReasonReactNativeTemplate.xcodeproj/: project.pbxproj
ios/ReasonReactNativeTemplate.xcodeproj/xcshareddata/xcschemes/: ReasonReactNativeTemplate.xcscheme
ios/ReasonReactNativeTemplate.xcworkspace/: contents.xcworkspacedata
ios/ReasonReactNativeTemplateTests/: ReasonReactNativeTemplateTests.m
src/: App.re  dune
